k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-hello-world-service
spec:
  selector:
    app: nodejs-hello-world
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: ClusterIP
